--- a/microblog/app/templates/login.html
+++ b/microblog/app/templates/login.html
@@ -31,4 +31,8 @@
       <input type="submit" value="登入">
     </p>
   <p> 新使用者？ <a href="{{ url_for('register') }}"> 點擊註冊！</a></p>
+  <p>
+    忘記你的密碼了嗎？
+    <a href="{{ url_for('reset_password_request') }}"> 點擊這裡重設 </a>
+  </p>
 {% endblock %}
